--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1794,6 +1794,7 @@
         document.getElementById("clear-potential").style.fontSize = "28px";
         document.getElementById("add-new-input").style.fontSize = "28px";
         document.getElementById("additional-info_1").style.marginTop = "2%";
+        document.getElementById("n-datapoints-to-show").style.height = "3%";
         if(after_startup)
         {
             console.log("customized");
