--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -1906,7 +1906,7 @@
 
                     if(dismiss.value == true)
                     {
-                        console.log("CONFIRM");
+                        console.log("CONFIRM + CHECKED");
                         set_cookie("show_warning_cookie", 90, true);
 
                     }
@@ -1914,6 +1914,10 @@
                     {
                         console.log("CANCEL");
                         set_cookie("show_warning_cookie", 7, false);
+                    }
+                    else if(dismiss.value == false)
+                    {
+                        console.log("CONFIRM + UNCHECKED");
                     }
                     else
                     {
