#112 test why is is always refreshing when starting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,6 +68,8 @@
         JSElement.onload = OnceLoaded;
         document.getElementsByTagName('head')[0].appendChild(JSElement);
 
+        console.log(document.location.host);
+
         function OnceLoaded() {
             hostname = document.location.host;
             keycloak = Keycloak();
