--- a/frontend/index.html
+++ b/frontend/index.html
@@ -68,7 +68,7 @@
         JSElement.onload = OnceLoaded;
         document.getElementsByTagName('head')[0].appendChild(JSElement);
 
-        console.log(document.location.host);
+        //console.log(document.location.host);
 
         function OnceLoaded() {
             hostname = document.location.host;
