#121 changed export text to download

--- a/frontend/bm_it.html
+++ b/frontend/bm_it.html
@@ -157,7 +157,7 @@
         <button onclick="window.location.href='stats.html'" class="button" id="stats-button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-chart-line"></i> Stats</button>
         
         <button onclick="restore_bm();" class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 15%;"><i class="fas fa-trash-restore-alt"></i> Restore</button>
-        <button onclick="download();" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-file-export"></i> Export</button>
+        <button onclick="download();" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-file-export"></i> Download</button>
         <button onclick="reset_settings();" class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 15%;"><i class="fas fa-hammer"></i> Reset Settings</button>
         
         <div class="page__toggle" style="margin-left: 10%; margin-top: 12%;">
