--- a/frontend/stats.html
+++ b/frontend/stats.html
@@ -211,7 +211,7 @@
                 
        
         <button onclick="reset_settings(); save_settings()"class="button" style="top: 10px; width:80%; margin-left: 10%; margin-top: 20%;"><i class="fas fa-hammer"></i> Reset</button>
-        <button onclick="download();" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-file-export"></i> Export</button>
+        <button onclick="download();" class="button" style="top: 10px; width:80%; margin-left: 10%;"><i class="fas fa-file-export"></i> Download</button>
 
         <div class="page__toggle" style="margin-left: 10%; margin-top: 12%;">
             <label class="toggle">
