--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,20 +59,23 @@
     <!--<script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>-->
     <script src="js/sweetalert.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@1/dark.css">
-    <!--<script src="http://jakob.ml:8081/auth/js/keycloak.js"></script> -->
 
     <script type="text/javascript"> 
+        
+        console.log(document.location.host);
         var JSLink = "http://" + document.location.host + ":8081/auth/js/keycloak.js";
         var JSElement = document.createElement('script');
         JSElement.src = JSLink;
         JSElement.onload = OnceLoaded;
         document.getElementsByTagName('head')[0].appendChild(JSElement);
 
-        //console.log(document.location.host);
-
         function OnceLoaded() {
             hostname = document.location.host;
             keycloak = Keycloak();
+
+            console.log(Object.keys(keycloak));
+            console.log(keycloak.createLoginUrl)
+
 
             keycloak.init({ onLoad: 'login-required' })
 
@@ -82,7 +85,7 @@
                     // alert(authenticated ? 'authenticated' : 'not authenticated');
                 }
             ).error(function() {
-                // alert('failed to initialize');
+                console.log('failed to initialize');
             });
 
             keycloak.onAuthSuccess = function() 
@@ -188,16 +191,10 @@
         });
 
         // To warn the user before leaving without saving
-        window.addEventListener('beforeunload', function (e) {
-            // Cancel the event
-            // e.preventDefault();
-            // Chrome requires returnValue to be set
-            if(5 == 2 - 3)
-                e.returnValue = '';
-        });
+        window.onbeforeunload = s => modified ? "" : null;
 
         function getusername()
-        {   
+        {
             return username;
         }
     </script>
@@ -408,13 +405,13 @@
         var cell7 = row.insertCell(6); // #37
         var cell8 = row.insertCell(7);
 
-        cell1.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' value='defaultvaluetoignore' class='title' data-placeholder='name' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/></div></td>";
-        cell2.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' value='defaultvaluetoignore' class='title' data-placeholder='kilo' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
-        cell3.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' value='defaultvaluetoignore' class='title' data-placeholder='reps' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:11em; min-height: 25px; text-align: center\"/></div></td>";
-        cell4.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' value='defaultvaluetoignore' class='title' data-placeholder='sets' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
-        cell5.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' value='defaultvaluetoignore' class='title' data-placeholder='maxr' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
-        cell6.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' value='defaultvaluetoignore' class='title' data-placeholder='time' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
-        cell7.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' value='defaultvaluetoignore' class='title' data-placeholder='note' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/></div></td>";
+        cell1.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' onkeypress='set_edited(true)' value='defaultvaluetoignore' class='title' data-placeholder='name' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/></div></td>";
+        cell2.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' onkeypress='set_edited(true)' value='defaultvaluetoignore' class='title' data-placeholder='kilo' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
+        cell3.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' onkeypress='set_edited(true)' value='defaultvaluetoignore' class='title' data-placeholder='reps' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:11em; min-height: 25px; text-align: center\"/></div></td>";
+        cell4.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' onkeypress='set_edited(true)' value='defaultvaluetoignore' class='title' data-placeholder='sets' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
+        cell5.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' onkeypress='set_edited(true)' value='defaultvaluetoignore' class='title' data-placeholder='maxr' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
+        cell6.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' onkeypress='set_edited(true)' value='defaultvaluetoignore' class='title' data-placeholder='time' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:10em; min-height: 25px; text-align: center\"/></div></td>";
+        cell7.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true' id='tags' onkeypress='set_edited(true)' value='defaultvaluetoignore' class='title' data-placeholder='note' style=\"table-layout:fixed; display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/></div></td>";
         cell8.innerHTML = "<button style='background: #222222; color: #28AD5F; font-style=bold; float: right' onclick='deleteRow(" + tableName + ", "+ rowCount + ")'>&nbsp<i class='fas fa-times-circle'></i></i></button>";
 
         row.setAttribute("id", "somerow", 0);
@@ -429,6 +426,12 @@
             ;
             // console.log("PC DETECTED AS DEVICE");
         }
+    }
+
+    function set_edited(value)
+    {
+        if(value)
+            modified = true;
     }
 
     function check_roles(assigned_roles, full_check)
@@ -625,13 +628,13 @@
 
         cell1.val = exid;
 
-        cell1.innerHTML = "<td class=\'tdinput\'> <div contenteditable='false' data-placeholder='name' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/>" + exname    + "</div></td>";
-        cell2.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='kilo' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + exweight  + "</div></td>";
-        cell3.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='reps' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:11em; min-height: 25px; text-align: center\"/>" + exreps    + "</div></td>";
-        cell4.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='sets' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + exsets    + "</div></td>";
-        cell5.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='maxr' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + exmaxreps + "</div></td>";
-        cell6.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='time' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + expause   + "</div></td>";
-        cell7.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='note' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:25em; min-height: 25px; text-align: center\"/>" + note + "</div></td>";
+        cell1.innerHTML = "<td class=\'tdinput\'> <div contenteditable='false' data-placeholder='name' onkeypress='set_edited(true)' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#7F7F7F; width:25em; min-height: 25px; text-align: center\"/>" + exname    + "</div></td>";
+        cell2.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='kilo' onkeypress='set_edited(true)' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + exweight  + "</div></td>";
+        cell3.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='reps' onkeypress='set_edited(true)' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:11em; min-height: 25px; text-align: center\"/>" + exreps    + "</div></td>";
+        cell4.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='sets' onkeypress='set_edited(true)' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + exsets    + "</div></td>";
+        cell5.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='maxr' onkeypress='set_edited(true)' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + exmaxreps + "</div></td>";
+        cell6.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='time' onkeypress='set_edited(true)' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:10em; min-height: 25px; text-align: center\"/>" + expause   + "</div></td>";
+        cell7.innerHTML = "<td class=\'tdinput\'> <div contenteditable='true'  data-placeholder='note' onkeypress='set_edited(true)' value=" + exid + " class='title' style=\"display: table-cell; background-color: transparent; color:#00ad5f; width:25em; min-height: 25px; text-align: center\"/>" + note + "</div></td>";
         cell8.innerHTML = "<button style='background: #222222; color: #28AD5F; font-style=bold; float: right' onclick='deleteRow(" + tableName + ", "+ rowCount + ")'>&nbsp<i class='fas fa-times-circle'></i></i></button>";
         
         // Needed for exctracting the data, maybe rename attribute
