#128 some tests with swal for input value
seems not to be processed correctly

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -697,7 +697,7 @@
 
         if(planname.length == 0)        // new plan, not updated plan
         {
-            plannamelocal = EnterPlanName();
+            plannamelocal = enter_plan_name();
 
             if(doesPlanNameExists(plannamelocal))
             {
@@ -1323,10 +1323,38 @@
         topFunction();
     }
 
-    function EnterPlanName()
+    function enter_plan_name()
     {
         var txt;
         var planname = prompt("Please enter the name of your plan:", "Plan by ..." /*+ getusername()*/ );
+
+        /*
+        Swal.mixin({
+          input: 'text',
+          confirmButtonText: 'Next &rarr;',
+          showCancelButton: true,
+          progressSteps: ['1', '2', '3']
+        }).queue([
+          {
+            title: 'Question 1',
+            text: 'Chaining swal2 modals is easy'
+          },
+          'Question 2',
+          'Question 3'
+        ]).then((result) => {
+          if (result.value) {
+            Swal.fire({
+              title: 'All done!',
+              html:
+                'Your answers: <pre><code>' +
+                  JSON.stringify(result.value) +
+                '</code></pre>',
+              confirmButtonText: 'Lovely!'
+            })
+          }
+        })
+        */
+
 
         if (planname == null || planname == "")
         {
